--- a/fala-cidadao/fala-cidadao.csproj
+++ b/fala-cidadao/fala-cidadao.csproj
@@ -14,6 +14,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Views\Usuarios\CadastroComum.cs" />
     <Compile Remove="Views\Usuarios\Class.cs" />
   </ItemGroup>
 
